new component + view fix

--- a/src/components/edit-kid/edit-kid.html
+++ b/src/components/edit-kid/edit-kid.html
@@ -11,7 +11,8 @@
 
     <ion-card text-wrap>
         <ion-card-header>
-            KID NAME {{kid.kidName}}
+            <ion-label fixed>Kid Name </ion-label>
+            <ion-input [(ngModel)]="kid.kidName" type="text" value=""></ion-input>
         </ion-card-header>
         <ion-card-content>
             KID ID {{kid.kidID}}
@@ -19,18 +20,7 @@
         <ion-card-content>
             GROUP {{kid.groupName}} ({{kid.groupID}})
         </ion-card-content>
-        <ion-card-content>
-
-            <ion-item>
-                <ion-label>Choose New Group</ion-label>
-                <ion-select [(ngModel)]="selectedGroup" (ionChange)=onItemSelection(selectedGroup)>
-                    <ion-option [value]="item" *ngFor="let item of groupList">{{item.groupName}} ({{item.groupID}})
-                    </ion-option>
-                </ion-select>
-
-
-            </ion-item>
-        </ion-card-content>
+       
 
         <ion-card-content>
             <button padding ion-button (click)="saveKidInfo()" icon-right>Save
