--- a/src/components/fees/fees.html
+++ b/src/components/fees/fees.html
@@ -39,7 +39,7 @@
             Attendance {{ item.present }}
 
         </ion-card-content>
-        <ion-card-content (click)="payFees(item)">
+        <ion-card-content >
             Fee Paid {{ item.feePaid }}
 
         </ion-card-content>
