--- a/src/components/login/login.html
+++ b/src/components/login/login.html
@@ -1,5 +1,6 @@
 <ion-content padding>
-    <h1>Welcome and please login here</h1>
+    <h1>Welcome to CoachKids for Parents
+            and please login here</h1>
     <div>Lets do amazing things together</div>
 
     <ion-list>
