--- a/src/components/progress2/progress2.html
+++ b/src/components/progress2/progress2.html
@@ -2,7 +2,7 @@
 <ion-header>
     <ion-navbar>
         <ion-title>
-            <img alt="logo" height="40" src="assets/imgs/parent.png"> PERFORMANCE
+            <img alt="logo" height="40" src="assets/imgs/parent.png"> PROGRESS
         </ion-title>
     </ion-navbar>
 </ion-header>
