--- a/src/components/kids/kids.html
+++ b/src/components/kids/kids.html
@@ -9,24 +9,49 @@
 
 <ion-content>
     <div padding>
-        <button ion-button (click)="getKidsList()">List Kids</button>
+        
         <button ion-button icon-right (click)="addKids()">Add Kids
           <ion-icon name="add-circle" ></ion-icon>
         </button>
     </div>
 
-    <ion-card *ngFor="let item of kidList" (click)="goToEditKidDetails(item)">
-        <ion-card-header>
-            KID ID {{ item.kidID }}
-        </ion-card-header>
-        <ion-card-content>
-            KID NAME {{ item.kidName }}
+    <ion-card style="background:light">
 
-        </ion-card-content>
-        <ion-card-content>
-            GROUP {{ item.groupName }} {{item.groupID}}
-        </ion-card-content>
-    </ion-card>
+    <ion-grid padding>
+        <ion-row style="background:#488aff">
+            <ion-col col-2>
+                KID ID
+            </ion-col>
+            <ion-col col-5>
+                KID NAME
+            </ion-col>
+            <ion-col col-5>
+                GROUP NAME ID
+            </ion-col>
+        </ion-row>
+    
+        <ion-row *ngFor="let item of kidList" (click)="goToEditKidDetails(item)">
+            <ion-col col-2>
+                
+                
+                        {{ item.kidID }}
+                           
+            </ion-col>
+            <ion-col col-5>  
+                 
+                        {{ item.kidName }}
+                                 
+            </ion-col>
+            <ion-col col-5> 
+                 
+                        {{ item.groupName }} {{item.groupID}}
+        
+            </ion-col>        
+        </ion-row>
+        
+    </ion-grid>
 
+    
+</ion-card>
 
 </ion-content>
